--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "podinstall": "cd ios && pod install",
+    "reset-cache": "react-native start --reset-cache"
+
+
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.8",
